Fixed webapp header css on mobile

--- a/apps/resources/stylesheets/header.css
+++ b/apps/resources/stylesheets/header.css
@@ -30,6 +30,10 @@ h1 {
 		max-width: 50vw;
 		font-size: 2.5em;
 	}
+	#home {
+		width: 30dvw;
+		margin-right: 2.5em;
+	}
 }
 
 @media (prefers-color-scheme: dark) {
