--- a/apps/resources/stylesheets/unix_clock.css
+++ b/apps/resources/stylesheets/unix_clock.css
@@ -113,14 +113,6 @@ ul li p {
 	.input {
 		margin-bottom: 10vh;
 	}
-	#home {
-		width: 30dvw;
-		margin-right: 2.5em;
-	}
-	h1 {
-		max-width: 50vw;
-		font-size: 2.5em;
-	}
 	h2 {
 		font-size: 3em;
 		width: 80vw;
